seongaee/21.04.21/bj_2529_부등호.md
### 문제
https://www.acmicpc.net/problem/2529

![image](https://user-images.githubusercontent.com/62600984/115410598-ba6f0c80-a22d-11eb-8006-50509b28dec8.png)

### 솔루션

```
숫자를 나열하기 위해 순열을 써서 완전탐색을 하였다.
이때 나열을 하면서 부등호 조건에 맞는지 체크해주어 가지치기를 하였다.
마지막으로 한자리씩 비교하여 최소, 최대값을 얻었다.
```

#### 순열
```
private static void process(int cnt) {
		
		if(cnt==R) {
			min=check("MIN");
			max=check("MAX");
			return;
		}
		
		for (int i = 0; i <= N; i++) {
			if(select[i]) continue;
			
			//부등호 유효성 확인
			if(cnt>0 && !cheakBu(cnt,i)) continue;
			
			numbers[cnt]=i;
			select[i]=true;
			process(cnt+1);
			select[i]=false;
		}
	}
```

#### 부등호 유효성 확인
```
private static boolean cheakBu(int cnt, int i) {
		
		int leftNum=numbers[cnt-1];
		int rightNum=i;
		char currentbu=bu[cnt-1];
		
		switch (currentbu) {
		case '<':
			if(leftNum<rightNum) return true;
			else return false;
		case '>':
			if(leftNum>rightNum) return true;
			else return false;
		}
		
		return false;
	}
```

#### 최소, 최대 정수 얻기
```
private static int[] check(String m) {
		
		int result[]=new int[R];
		
		for (int i = 0; i < R; i++) {
			result[i]=numbers[i];
		}

		switch (m) {
		case "MAX":
			for (int i = 0; i < R ; i++) {
				if(result[i] > max[i]) return result;
			}
			return max;
			
		case "MIN":
			for (int i = 0; i < R ; i++) {
				if(result[i] > min[i]) return min;
			}
			return result;
		}
		
		return result;
		
	}
```

#### 전체 코드
```
package study12;

import java.io.BufferedReader;
import java.io.IOException;
import java.io.InputStreamReader;
import java.util.Arrays;
import java.util.StringTokenizer;

public class bj_2529_부등호 {
	
	static int N,R,numbers[], min[], max[];
	static boolean select[];
	static char bu[];
	static BufferedReader br=new BufferedReader(new InputStreamReader(System.in));
	static StringTokenizer st;
	
	public static void main(String[] args) throws NumberFormatException, IOException {
		
		//입력
		N=9;
		R=Integer.parseInt(br.readLine())+1;
		numbers=new int[R];
		select=new boolean[N+1];
		bu=new char[R-1];
		min=new int[R]; Arrays.fill(min, 9);
		max=new int[R];
		
		st=new StringTokenizer(br.readLine());
		for (int i = 0; i < R-1; i++) {
			bu[i]=st.nextToken().charAt(0);
		}
		
		//순열
		process(0);
		
		//결과
		for (int i = 0; i < R; i++) {
			System.out.print(max[i]);
		}
		System.out.println();
		for (int i = 0; i < R; i++) {
			System.out.print(min[i]);
		}
	}

	private static void process(int cnt) {
		
		if(cnt==R) {
			min=check("MIN");
			max=check("MAX");
			return;
		}
		
		for (int i = 0; i <= N; i++) {
			if(select[i]) continue;
			
			//부등호 유효성 확인
			if(cnt>0 && !cheakBu(cnt,i)) continue;
			
			numbers[cnt]=i;
			select[i]=true;
			process(cnt+1);
			select[i]=false;
		}
	}


	private static int[] check(String m) {
		
		int result[]=new int[R];
		
		for (int i = 0; i < R; i++) {
			result[i]=numbers[i];
		}

		switch (m) {
		case "MAX":
			for (int i = 0; i < R ; i++) {
				if(result[i] > max[i]) return result;
			}
			return max;
			
		case "MIN":
			for (int i = 0; i < R ; i++) {
				if(result[i] > min[i]) return min;
			}
			return result;
		}
		
		return result;
		
	}

	private static boolean cheakBu(int cnt, int i) {
		
		int leftNum=numbers[cnt-1];
		int rightNum=i;
		char currentbu=bu[cnt-1];
		
		switch (currentbu) {
		case '<':
			if(leftNum<rightNum) return true;
			else return false;
		case '>':
			if(leftNum>rightNum) return true;
			else return false;
		}
		
		return false;
	}
}

```
